feat: add device status component and audio device detection hook
- Implemented DeviceStatus component to display audio input/output devices and microphone status.
- Created useDeviceStatus hook for managing audio device detection and microphone permission handling.
- Added functionality to check microphone availability and request permission.
- Included event listener for device changes to update the device list dynamically.
- Added a manifest file and service worker for potential PWA capabilities.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="manifest" href="/manifest.webmanifest" />
+  <meta name="theme-color" content="#ffffff" />
+  <meta name="mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Focally - Transmissão de Áudio Assistiva</title>
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      // Unregister service workers early in development to avoid SW intercepting
+      // the Vite HMR websocket requests (fixes MIME/websocket connection errors).
+      try {
+        if ((location.hostname === 'localhost' || location.hostname === '127.0.0.1') && 'serviceWorker' in navigator) {
+          navigator.serviceWorker.getRegistrations().then((regs) => {
+            regs.forEach((r) => r.unregister().catch(() => {}))
+          }).catch(() => {})
+        }
+      } catch (e) {
+        // ignore
+      }
+    </script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
