feat: adiciona prompt de instalação para facilitar a instalação do aplicativo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <link rel="manifest" href="/manifest.webmanifest" />
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="theme-color" content="#ffffff" />
+  <meta name="application-name" content="Focally" />
+  <meta name="apple-mobile-web-app-title" content="Focally" />
+  <meta name="msapplication-TileColor" content="#ffffff" />
+  <link rel="apple-touch-icon" href="/image/logo-192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Focally - Transmissão de Áudio Assistiva</title>
   </head>
